syntax				= "proto3";
option optimize_for = CODE_SIZE;

message Cfg_SkillDetachStatus
{
	message Row
	{
		uint32 id		   = 1;
		uint32 idskill	   = 2;
		uint32 status_id   = 3;
		uint32 status_type = 4;
		uint32 status_flag = 5;
	}

	repeated Row rows = 1;
}